--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   <header class="header">
     <img src="profile.jpg" alt="Marcella Ria profile picture" class="profile-pic"/>
     <h1>Marcella Ria</h1>
-    <p>Email: marcella.ria@example.com | Phone: (555) 123-4567</p>
+    <p>Email: ria080626@gmail.com | Phone: (216) 650-2403</p>
   </header>
 
   <section class="summary">
