--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 <body>
 
   <header class="header">
-    <img src="profile.jpg" alt="Marcella Ria profile picture" .class=profile-pic<!DOCTYPE html>
+    <img src="profile.jpg" alt="Marcella Ria profile picture" class="profile-pic" />!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
